Fixed Left menu icon alignment for IOS
(cherry picked from commit 66fe58a95200e68de26f3571fedc449908155e21)

--- a/src/main/webapp/scripts/modules/layouts/device/styles/less/mobile.less
+++ b/src/main/webapp/scripts/modules/layouts/device/styles/less/mobile.less
@@ -65,6 +65,7 @@
       .app-header-menu {
         display: table-cell;
         width: 18pt;
+        vertical-align: top;
       }
       .app-header-container {
         display:table-cell;
